feat: /resources slash command, vault modularization, doc updates & import cleanup
- Created /resources slash command (resources.prompt.md) with 6 actions:
  search, browse, scrape, recommend, add, details — backed by 7 MCP tools
  and 30+ curated resources in the built-in vault

- Modularized vault into ResourceProvider interface + 9 category providers:
  JavaResources (11), WebResources (3), PythonResources (2),
  AlgorithmsResources (2), EngineeringResources (4), DevOpsResources (4),
  DataAndSecurityResources (2), AiMlResources (2), GeneralResources (3)
  Refactored BuiltInResources to compose providers via Stream pipeline

- Created vault/providers/ subpackage with package-info.java documentation

- Fixed bug in ReadabilityScorer: Set.of(String[]) created Set<String[]>
  with 1 element instead of individual word set; replaced with
  new HashSet<>(Arrays.asList(words))

- Removed unused ResourceType import from ResourceVault.java

- Updated 7 documentation files with /resources command:
  hub.prompt.md (nav tree + quick ref), navigation-index.md (tables + file map),
  slash-commands.md (26 commands, detail section, hub shortcut),
  file-reference.md (prompt list), prompts/README.md (table),
  .github/README.md (at-a-glance, folder tree, commands table, doc map)

- Added cross-reference notes between java-learning-resources SKILL.md
  and resources.prompt.md to connect deep offline content with runtime vault

- ConfigManager import reorder (alphabetical)

created by gpt